--- a/pom.xml
+++ b/pom.xml
@@ -56,15 +56,17 @@
 			<version>2.0.16</version>
 		</dependency>
 		
-		
-
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.2.4.Final</version>
 		</dependency>
-
 
 		<!-- Testing -->
 		<dependency>
@@ -73,8 +75,6 @@
 			<version>${junit.version}</version>
 			<scope>test</scope> <!-- solo se usa para Test, cuando se crea el projecto no se usa esta libreria -->
 		</dependency>
-
-
 
 	</dependencies>
 
